<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_launch</name>
  <version>0.1.0</version>
  <description>Camera launch for ROS Humble in Docker</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>usb_cam</exec_depend>
  <exec_depend>openni2_camera</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
